Remove AI service and provider implementations; update folder structure and admin templates.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,13 @@ dependencies = [
     "scrapy>=2.11.0",
     "requests>=2.31.0",
     "lxml>=5.0.0",
+    # Stock Data
+    "yfinance>=0.2.0",
     # AI/ML
     "transformers>=4.30.0",
     "torch>=2.0.0",
     "openai>=1.0.0",
-    "google-generativeai>=0.3.0",
+    "google-genai>=0.2.0",
     # Template Rendering
     "jinja2>=3.1.2",
     # Environment Variables
@@ -39,6 +41,8 @@ dependencies = [
     "pydantic>=2.0.0",
     "email-validator>=2.0.0",
     "itsdangerous>=2.2.0",
+    "caseutil>=0.7.2",
+    "humanize>=4.14.0",
 ]
 
 [project.optional-dependencies]
